# LengowTest

./: .gitignore  Makefile  Pipfile  README.md  app.env  cmdenv.bat  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 77848694d299_create_current_table.py  a1a992e78b34_split_conversion_model_in_something_.py
app/: main.py
app/api/: __init__.py  money.py
app/api/schema/: intput_query.py  output_answer.py  schema_const.py
app/config/: config.py
app/db/: db_const.py  repository.py  session.py
app/db/model/: conversion.py  currency_rate.py  daily_reference.py
app/domain/: __init__.py  currencies_const.py  domain_const.py  model_manager.py  parser.py
app/domain/model/: conversion.py  currency_rate.py  daily_reference.py
app/tests/: test_db.py  test_routes.py
app/tools/: logger.py  singleton.py
scripts/: create_db.sql  reset_db.sql  update_db.py
