[tool.poetry]
name = "LengowTest"
version = "0.1.0"
description = ""
authors = []


[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.0"}
fastapi-utils = "^0.7"
typing-inspect = "^0.9.0"
pydantic-settings = "^2.4.0"
sqlalchemy = "^2.0.36"
requests = "^2.32.3"
typer = "^0.15.1"
psycopg2 = "^2.9.10"
alembic = "^1.14.0"

[tool.poetry.dev-dependencies]
black = "^24"
pytest = "^8.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.3"

